# pydantic-airflow-agent

./: README.md  pyproject.toml
dags/: exampledag.py
pydantic_airflow_agent/: agent.py
