[tool.poetry]
name = "pydantic-airflow-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic-ai = {extras = ["logfire"], version = "^0.0.15"}
colorlog = "^6.9.0"
apache-airflow = "^2.10.4"
devtools = "^0.12.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
